# arbitration_utils

./: CMakeLists.txt  README.md  package.xml
config/: alpha.fis  alpha_2.fis  alpha_3.fis  alpha_3bis.fis  alpha_3c.fis  config.yaml  drapebot_config.yaml  scene_objects.yaml
include/arbitration_utils/: arbitration_utils.h
launch/: arbitration.launch  drapebot_arbitration.launch
script/: velocity_arbitration.py
src/: arbitration_node.cpp  arbitration_utils.cpp  drapebot_arbitration.cpp
